--- a/examples/FSharp/FSharp.fsproj
+++ b/examples/FSharp/FSharp.fsproj
@@ -51,6 +51,7 @@
       <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
       <PackageReference Include="NBomber.Http" Version="1.0.0-rc4" />
       <PackageReference Include="NBomber.Sinks.InfluxDB" Version="1.0.0-rc4" />
+      <PackageReference Include="Ply" Version="0.3.1" />
       <PackageReference Include="Unquote" Version="5.0.0" />
       <PackageReference Include="xunit" Version="2.4.1" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
